Adds camera functionality and beginnings of canvas editing

--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -9,7 +9,7 @@
 <ion-content padding>
   <div class="center-vertical">
     <div text-center>    
-      <ion-icon name="camera"></ion-icon>
+      <ion-icon name="camera" (click)="takePicture()"></ion-icon>
       <p>Take a Picture</p>
     </div>
     <div text-center>    
