--- a/app/pages/detailed-view/detailed-view.html
+++ b/app/pages/detailed-view/detailed-view.html
@@ -7,14 +7,17 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>detailed-view</ion-title>
+    <ion-title>Photo</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
-
-<canvas #photo class=''></canvas>
+<ion-content>
+{{src}}
+<div class="canvas-container">
+	<canvas #photo class=''></canvas>
+	<!-- <button (click)="grayscale()"></button> -->
+</div>
 
 </ion-content>
