--- a/app/pages/detailed-view/detailed-view.html
+++ b/app/pages/detailed-view/detailed-view.html
@@ -14,10 +14,9 @@
 
 
 <ion-content>
-{{src}}
 <div class="canvas-container">
 	<canvas #photo class=''></canvas>
-	<!-- <button (click)="grayscale()"></button> -->
+	<button (click)="filterImage('grayscale')">aaaaaaa</button>
 </div>
 
 </ion-content>
