Adds gallery picker

--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -13,7 +13,7 @@
       <p>Take a Picture</p>
     </div>
     <div text-center>    
-      <ion-icon name="images"></ion-icon>
+      <ion-icon name="images" (click)="showGallery()"></ion-icon>
       <p>View Gallery</p>
     </div>
   </div>
