Adds initial structure of FilterComponent

--- a/app/pages/detailed-view/detailed-view.html
+++ b/app/pages/detailed-view/detailed-view.html
@@ -14,9 +14,11 @@
 
 
 <ion-content>
-<div class="canvas-container">
-	<canvas #photo class=''></canvas>
-	<button (click)="filterImage('grayscale')">aaaaaaa</button>
-</div>
-
+	<div class="canvas-container">
+		<canvas #photo class=''></canvas>
+		<button (click)="filterImage('grayscale')">aaaaaaa</button>
+	</div>
+	<ion-scroll scrollX="true">
+	
+	</ion-scroll>
 </ion-content>
