--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -6,15 +6,15 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content>
   <div class="center-vertical">
     <div text-center>    
       <ion-icon name="camera" (click)="takePicture()"></ion-icon>
-      <p>Take a Picture</p>
+      <p>Take a Photo</p>
     </div>
     <div text-center>    
       <ion-icon name="images" (click)="showGallery()"></ion-icon>
-      <p>View Gallery</p>
+      <p>Choose a Photo</p>
     </div>
-  </div>
+  </div>  
 </ion-content>
