Adds a couple working filters and horizontal filter scroll

--- a/app/pages/detailed-view/detailed-view.html
+++ b/app/pages/detailed-view/detailed-view.html
@@ -15,10 +15,11 @@
 
 <ion-content>
 	<div class="canvas-container">
-		<canvas #photo class=''></canvas>
-		
+		<canvas #photo class=''></canvas>		
 	</div>
+
+<ion-footer>
 	<ion-scroll scrollX="true">
-		<filter *ngFor="let filter of filters" filterName="filter"></filter>
+			<filter *ngFor="let filter of filters" filterName="{{filter}}"></filter>				
 	</ion-scroll>
-</ion-content>
+</ion-footer>
