Adds performance improvements

--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -9,11 +9,11 @@
 <ion-content>
   <div class="center-vertical">
     <div text-center>    
-      <ion-icon name="camera" (click)="takePicture()"></ion-icon>
+      <ion-icon name="camera" on-tap="takePicture()"></ion-icon>
       <p>Take a Photo</p>
     </div>
     <div text-center>    
-      <ion-icon name="images" (click)="showGallery()"></ion-icon>
+      <ion-icon name="images" on-tap="showGallery()"></ion-icon>
       <p>Choose a Photo</p>
     </div>
   </div>  
