--- a/app/pages/detailed-view/detailed-view.html
+++ b/app/pages/detailed-view/detailed-view.html
@@ -20,6 +20,6 @@
 
 <ion-footer>
 	<ion-scroll scrollX="true">
-			<filter *ngFor="let filter of filters" filterName="{{filter}}"></filter>				
+			<filter *ngFor="let filterName of filterNames" filterName="{{filterName}}"></filter>				
 	</ion-scroll>
 </ion-footer>
