Adds filter labels, custom nav buttons and some more styling

--- a/app/pages/detailed-view/detailed-view.html
+++ b/app/pages/detailed-view/detailed-view.html
@@ -8,6 +8,9 @@
 
   <ion-navbar ionic>
     <ion-title>Photo</ion-title>
+    <ion-buttons end>
+    	<button class="nextBtn" clear>Next</button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
