Adds share page and cleans up soem code and naming conventions

--- a/app/pages/detail/detail.html
+++ b/app/pages/detail/detail.html
@@ -9,7 +9,7 @@
   <ion-navbar ionic>
     <ion-title>Photo</ion-title>
     <ion-buttons end>
-    	<button class="nextBtn" clear>Next</button>
+    	<button class="nextBtn" on-tap="navToSharePage()" clear>Next</button>
     </ion-buttons>
   </ion-navbar>
 
