Adds basic social sharing

--- a/app/pages/detail/detail.html
+++ b/app/pages/detail/detail.html
@@ -22,7 +22,7 @@
 	</div>
 
 <ion-footer>
-	<ion-scroll scrollX="true" scrollbar-y="false">	
+	<ion-scroll scrollX="true">	
 		<filter *ngFor="let filterName of filterNames" filterName="{{filterName}}"></filter>				
 	</ion-scroll>
 </ion-footer>
