--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -9,7 +9,7 @@
 <ion-content>
   <div class="center-vertical">
     <div text-center>    
-      <ion-icon name="camera" on-tap="startCamera()"></ion-icon>
+      <ion-icon name="camera" on-tap="getPicture('camera')"></ion-icon>
       <!-- <ion-icon name="camera" on-tap="getPicture('camera')"></ion-icon> -->
       <p>Take a Photo</p>
     </div>
